sticky menu fixed on mobile

--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -25,6 +25,7 @@ html, body {
     width: 100vw;
     height: auto;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     background-color: var(--dark);
     z-index: 99;
